; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-events.c_init_epoll.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-events.c_init_epoll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@epoll_fd = common dso_local global i32 0, align 4
@Events = common dso_local global %struct.TYPE_2__* null, align 8
@MAX_EVENTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"epoll_create()\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @init_epoll() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @epoll_fd, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %19

6:                                                ; preds = %0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Events, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store i32 -1, i32* %9, align 4
  %10 = load i32, i32* @MAX_EVENTS, align 4
  %11 = call i32 @epoll_create(i32 %10)
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %6
  %15 = call i32 @perror(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %19

16:                                               ; preds = %6
  %17 = load i32, i32* %2, align 4
  store i32 %17, i32* @epoll_fd, align 4
  %18 = load i32, i32* %2, align 4
  store i32 %18, i32* %1, align 4
  br label %19

19:                                               ; preds = %16, %14, %5
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32 @epoll_create(i32) #1

declare dso_local i32 @perror(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
